@@ -1,3 +1,5 @@
-== <%= version %> <%= Date.today %>
+h1. <%= version %> <%= Date.today %>
 
-* Initial release
+h2. Initial release
+
+Yay! First release.
