@@ -1,0 +1,8 @@
+<html>
+  <head>
+    <title>Release Notes</title>
+  </head>
+  <body>
+    <%= release_notes_html %>
+  </body>
+</html>
