@@ -1,5 +1,6 @@
 require File.dirname(__FILE__) + "/../../lib/choctop"
 
+require "rubygems"
 gem 'cucumber'
 require 'cucumber'
 gem 'rspec'
