@@ -1,3 +1,7 @@
+* install_choctop generates a ReleaseNotes.txt file
+* 'rake feed' converts ReleaseNotes.txt into release_notes.html file for upload
+* #name is the project's folder name if info_plist['CFBundleExecutable'] == "${EXECUTABLE}"
+
 == 0.9.2 2009-01-29
 
 * fixed instances of "SUFeedURLKey" to "SUFeedURL" due to f@#$-up error message in Sparkle code that led me astray
